<resources>
	<string name="app_name">Insurance</string>
	<string name="CreateStatement">Dont have an account ? create new</string>
	<string name="WelCome">Welcome !</string>
	<string name="LoginContinue">Please login to continue</string>
	<string name="signupContinue">Please sign up to continue</string>
	<string name="otp">Please Verify yout Register \n mobile number</string>
	<string name="Hey">Hey !</string>
	<string name="Resend">We just Sent you OTP to your register \n register mobile number or Resend</string>
	<string name="agent">I am Insurance Agent</string>
	<string name="title_activity_home_screen">HomeScreenActivity</string>
	<string name="FindDetails">Find Details</string>
	<string name="INSURANCE">INSURANCE</string>
	<string name="option">We will help you to find the best auto insurance \n option in your area</string>
	<string name="Get">Get Details</string>
	<string name="EnterNo">Enter Registration number [Ex: KA01EF72727]</string>
	<string name="owner">Owner</string>
	<string name="makeyear">Make Year</string>
	<string name="address">Address</string>
	<string name="Chaisino">Chasi No</string>
	<string name="Engno">Eng No</string>
	<string name="Idv">IDV Value</string>
	<string name="PreviuosPolicy">Previous Policy</string>
	<string name="insuranceto">Insurance To</string>
	<string name="insuranceFrom">Insurance from</string>
	<string name="proceed">Proceed</string>
	<string name="Congratulations">Congratulations !</string>
	<string name="GoToMyInsurance">Go To My Insurance</string>
	<string name="DetailPrevious">Details Previous Policy</string>
	<string name="Requestsurveyer">Request for surveyer</string>
	<string name="AddPhoto">Add photo</string>
	<string name="uploadPolicy">Upload Policy Document</string>
	<string name="proceedTo">Proceed To Insurance</string>
	<string name="EnterPrevious">Enter Previous Policy Number(Optional)</string>
	<string name="title_activity_insurance_details">InsuranceDetailsActivity</string>
	<string name="Myinsurance">My Insurance</string>
	<string name="ExpiryDate">Expiry Date</string>
	<string name="StartDate">Start Date</string>
	<string name="PolicyNo">Policy No</string>
	<string name="IdvT">IDV</string>
	<string name="product">Product</string>
	<string name="Ncb">NCB</string>
	<string name="InsurancePlan">Insurance Plan</string>
	<string name="Inusurance">Inusurance</string>
	<string name="things">Things covered by insurance</string>
	<string name="vehicle">Vehicle</string>
	<string name="price">Price</string>
	<string name="title_activity_main">MainActivity</string>
	<string name="EnterOTP">Please enter 5 digit OTP</string>
	<string name="AddNominee">Add Nominee</string>
	<string name="EnterName">Enter Name of Nominee*</string>
	<string name="EnterNominee">Enter Relation with Nominee*</string>
	<string name="Next">Next</string>
	<string name="payHere">Pay Now</string>
	<string name="Total">Total</string>
	<string name="upload_rc_book">Upload RC book</string>
	<string name="upload_address_proof">Upload address proof</string>
	<string name="upload_id_proof">Upload id proof</string>
	<string name="policy">Policy</string>
	<string name="rc">RC</string>
	<string name="id">ID</string>
	<string name="selectvechiletype">Select Vehicle Type</string>
	<string name="termscondition"><![CDATA[Terms & Conditions]]></string>
	<string name="claimtext">Are you sure, you have not claimed any insurance in your last premium?</string>
	<string name="claimtextnext">n your insurance will be revoked case we find any claim than you are not eligible for an insurance.</string>
	<string name="addvehiclephote">Upload Vehicle Photo</string>
	<string name="aboutus">About Us</string>
	<string name="aboutusdesc">We are pioneer in the segment of general insurance renewable business to avoid complexity and lengthy process to renew the vehicle insurance policy,  we have created easy and user friendly app to renew the policy in just 5 simple steps also we have provided flexibility to search vehicle detail by just feeding vehicle number with the flexibility of online payment and instance policy issuance solution.</string>
	<string name="termsncondition">Terms and Condition</string>
	<string name="policydesc">incorrect information or mismatch in the detail policy will not be issued.\nPolicy  will be
        issued post receiving the payment.\nPolicy renewal should be done 24 hours before the policy expiry date.\nKarnataka (bangalore) jurisdiction only.\nAll right reserved</string>
	<string name="EnterAgentNumber">Enter Agent number(Optional)</string>
	<string name="forsmartcoveragency">For smart cover Agent only</string>
	<string name="youaredone">You are done</string>
	<string name="pleasewait">Please wait...</string>
	<string name="upload_activity">UploadActivity</string>
	<string name="download_activity">DownloadActivity</string>
	<string name="download_selection_activity">Select a file from the bucket</string>
	<string name="download">Download</string>
	<string name="manage_download">Manage downloads</string>
	<string name="manage_upload">Manage uploads</string>
	<string name="upload">Upload</string>
	<string name="upload_file">Upload a file</string>
	<string name="upload_image">Upload an image</string>
	<string name="pause">Pause</string>
	<string name="resume">Resume</string>
	<string name="cancel">Cancel</string>
	<string name="delete">Delete</string>
	<string name="pause_all">Pause all</string>
	<string name="cancel_all">Cancel all</string>
	<string name="refreshing">Refreshing</string>
	<string name="please_wait">Please wait</string>
	<string name="uploadingdocuments">Please wait, while we Upload Documents</string>
	<string name="policydocument">policyDocument</string>
	<string name="rcbook">RcBook</string>
	<string name="addressproof">AddressProof</string>
	<string name="idproof">IdProof</string>
</resources>