<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/rvActionBar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/gradient">

        <ImageView
            android:id="@+id/ivHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:contentDescription="@null"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15sp"
            android:layout_toRightOf="@id/ivHome"
            android:text="@string/AddNominee"
            android:textColor="#FFFFFF"
            fontPath="fonts/CeliasMedium.otf"
            tools:ignore="MissingPrefix"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/rvClick"
            android:layout_width="130dp"
            android:layout_height="match_parent">
        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rvActionBar"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingLeft="10dp"
            android:background="@drawable/border_for_layout_gray"
            android:hint="@string/EnterName"
            android:textSize="13sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/border_for_layout_gray"
            android:hint="@string/EnterNominee"
            android:textSize="13sp" />


        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/Next"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textAllCaps="false"
            android:background="@drawable/gradient"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>
