<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img"
    android:orientation="vertical"
    android:padding="40dp">

    <LinearLayout
        android:id="@+id/llLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvWelCome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorTransparent"
            android:gravity="center"
            android:text="@string/WelCome"
            android:textColor="@color/colorWhite"
            android:textSize="35sp"
            fontPath="fonts/CeliasBold.otf"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/tvLoginContinue"

            fontPath="fonts/CeliasMedium.otf"
            tools:ignore="MissingPrefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@color/colorTransparent"
            android:text="@string/LoginContinue"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            />
        <TextView
            fontPath="fonts/Celias.otf"
            tools:ignore="MissingPrefix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorTransparent"
            android:hint="Enter Mobile Number"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/colorTransparent"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorWhite" />

        <ImageView
            android:id="@+id/ivNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:contentDescription="@null"
            android:src="@drawable/next" />

        <TextView
            android:id="@+id/tvStatement"
            fontPath="fonts/CeliasMedium.otf"
            tools:ignore="MissingPrefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@color/colorTransparent"
            android:text="@string/CreateStatement"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            />
    </LinearLayout>
</LinearLayout>